<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">


    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="96dp"
        android:gravity="top|left"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/project_selete_edit_name"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:background="@drawable/project_task_common_editdialog_bg"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_c8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/project_selete_dialog_cancel"
            android:textSize="16sp"
            android:textColor="@color/gray"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray_c8"/>

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:layout_weight="1.0"
            android:text="@string/project_selete_dialog_sure"
            android:textSize="16sp"
            android:textColor="@color/gray"/>

    </LinearLayout>

</LinearLayout>
