<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_template"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingEnd="8dp"
            android:paddingStart="15dp"
            android:text="@string/project_template"
            android:textColor="@color/project_task_group_name"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:hint="@string/please_select_hint"
            android:lines="1"
            android:textColorHint="@color/gray_ca"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F1F3F6"
            android:lines="1"
            android:paddingBottom="4dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:textColor="#666666"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"
            tools:text="HR招聘工作流程" />

        <ImageView
            android:id="@+id/iv_right"
            style="@style/custom_default_icon_style"
            android:src="@drawable/icon_to_next" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/project_group_name"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/et_group_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="end|center_vertical"
            android:hint="@string/project_please_input_group_name"
            android:lines="1"
            android:maxLength="25"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/_323232"
            android:textColorHint="@color/gray_ca"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_task_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/ll_add_task_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_blue_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_add_list"
            android:textColor="@color/app_blue"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>
</LinearLayout>