<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="12dp">


    <RelativeLayout
        android:id="@+id/rl_week1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/project_week1"
            android:textColor="@color/project_repeat_task_item"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_week1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:background="@color/gray_f2" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_week2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/project_week2"
            android:textColor="@color/project_repeat_task_item"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_week2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:background="@color/gray_f2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_week3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/project_week3"
            android:textColor="@color/project_repeat_task_item"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_week3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:background="@color/gray_f2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_week4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/project_week4"
            android:textColor="@color/project_repeat_task_item"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_week4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:background="@color/gray_f2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_week5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/project_week5"
            android:textColor="@color/project_repeat_task_item"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_week5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:background="@color/gray_f2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_week6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/project_week6"
            android:textColor="@color/project_repeat_task_item"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_week6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:background="@color/gray_f2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_week7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/project_week7"
            android:textColor="@color/project_repeat_task_item"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/iv_week7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/finish"
            android:visibility="gone"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:background="@color/gray_f2" />
    </RelativeLayout>
</LinearLayout>